syntax = "proto3";

package redpanda.api.console.v1alpha1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

// SCRAM Auth settings.
message SCRAMAuth {
  string username = 1;
  string password = 2;
  Mechanism mechanism = 3;

  enum Mechanism {
    MECHANISM_UNSPECIFIED = 0;
    MECHANISM_SCRAM_SHA_256 = 1;
    MECHANISM_SCRAM_SHA_512 = 2;
  }
}

// Request to start the creation of debug bundle process with given configuration parameters.
message CreateDebugBundleRequest {
  // Optional authentication settings to use for the request.
  oneof authentication {
    SCRAMAuth scram = 1;
  }

  // Optional broker IDs. Do not set / leave empty to create for all.
  repeated int32 broker_ids = 3;

  // The size limit of the controller logs that can be stored in the bundle.
  int32 controller_logs_size_limit_bytes = 4 [(buf.validate.field).int32 = {gte: 0}];

  // For how long to collect samples for the CPU profiler
  optional int32 cpu_profiler_wait_seconds = 5 [(buf.validate.field).int32 = {gte: 15}];

  // Include logs dated from specified date onward.
  google.protobuf.Timestamp logs_since = 6;

  // Read the logs until the given size is reached.
  int32 logs_size_limit_bytes = 7 [(buf.validate.field).int32 = {gte: 0}];

  // Include logs older than the specified date.
  google.protobuf.Timestamp logs_until = 8;

  // Interval between metrics snapshots.
  int32 metrics_interval_seconds = 9 [(buf.validate.field).int32 = {gte: 0}];

  bool tls_enabled = 10;

  bool tls_insecure_skip_verify = 11;

  string namespace = 12 [
    (buf.validate.field).string.max_len = 253,
    (buf.validate.field).string.pattern = "^([a-zA-Z0-9-]*)$"
  ];

  // Partitions. When provided, rpk saves extra admin API requests for those partitions.
  // Optional.
  // In format {namespace/}topic/{partition ids} where namespace is optional and will be replaced with "kafka" if not provided.
  // Partition IDs is comma separated numbers.
  // kafka/foo/1,2,3. also there can be multiple of those so
  // ['kafka/foo/1,2,3', 'private/baz/3.4.5']
  repeated string partitions = 13;
}

// Response to CreateDebugBundle.
message CreateDebugBundleResponse {
  // Job ID. UUID.
  string job_id = 1;
}

// Gets status of debug bundle progress.
message GetDebugBundleStatusRequest {
  // Optional broker IDs to get. If not set / empty get all.
  repeated int32 broker_ids = 1;
}

message DebugBundleStatus {
  // The broker ID.
  int32 broker_id = 1;

  // The job UUID of this process.
  string job_id = 2;

  // The status of the job.
  Status status = 3;

  // When the job was started.
  google.protobuf.Timestamp created_at = 4;

  // Path in API to get the file.
  string filename = 5;

  // Size of the debug bundle zip file.
  int64 size = 6;

  // Only filled in once the process completes.  Content of stdout from rpk.
  repeated string stdout = 7;

  // Only filled in once the process completes.  Content of stderr from rpk.
  repeated string stderr = 8;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_RUNNING = 1;
    STATUS_SUCCESS = 2;
    STATUS_ERROR = 3;
  }
}

// The response to GetDebugBundleStatus.
message GetDebugBundleStatusResponse {
  message DebugBundleBrokerStatus {
    // The broker ID.
    int32 broker_id = 1;

    // The value of the status, either Bundle Error or status.
    oneof value {
      BundleError error = 2;
      DebugBundleStatus bundle_status = 3;
    }
  }

  repeated DebugBundleBrokerStatus broker_statuses = 1;
}

message DeleteDebugBundleRequest {
  string job_id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.predefined) = {
      cel: {
        id: "string.uuid"
        message: "value must be a valid UUID"
        expression: "!rules.uuid || this == \'\' || this.matches(\'^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$\')"
      }
      cel: {
        id: "string.uuid_empty"
        message: "value is empty, which is not a valid UUID"
        expression: "!rules.uuid || this != \'\'"
      }
    }
  ];

  // Optional broker IDs. Do not set / empty for all.
  repeated int32 broker_ids = 2;
}

// Response for DeleteDebugBundle.
message DeleteDebugBundleResponse {
  repeated BundleError errors = 1;
}

// Request for DeleteDebugBundleFile.
message DeleteDebugBundleFileRequest {
  repeated DeleteDebugBundleFile files = 1;
}

// Parameters for DeleteDebugBundleFileRequest.
message DeleteDebugBundleFile {
  int32 broker_id = 1;
  string filename = 2;
}

// Response for DeleteDebugBundleFile.
message DeleteDebugBundleFileResponse {
  repeated BundleError errors = 1;
}

// Error details for various responses and operations.
message BundleError {
  // The broker ID.
  int32 broker_id = 1;

  // The error code.
  BundleErrorCode code = 2;

  // Additional information
  string message = 3;
}

// Error code enum.
// https://github.com/redpanda-data/redpanda/blob/dev/src/v/debug_bundle/error.h#L22
enum BundleErrorCode {
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  // OK. No Error.
  BUNDLE_ERROR_CODE_OK = 0;

  // Debug bundle process already running
  BUNDLE_ERROR_CODE_PROCESS_ALREADY_RUNNING = 1;

  // Debug bundle process not running.
  BUNDLE_ERROR_CODE_PROCESS_NOT_RUNNING = 2;

  // Invalid parameters.
  BUNDLE_ERROR_CODE_INVALID_PARAMETERS = 3;

  // Debug process failed.
  BUNDLE_ERROR_CODE_PROCESS_FAILED = 4;

  // Job ID not recognized.
  BUNDLE_ERROR_CODE_INVALID_JOB_ID = 5;

  // Debug bundle process was never started.
  BUNDLE_ERROR_CODE_PROCESS_NOT_STARTED = 6;

  // Internal error.
  BUNDLE_ERROR_CODE_INTERNAL_ERROR = 7;
}

// Request for GetClusterHealth call.
message GetClusterHealthRequest {}

// Response for GetClusterHealth call.
message GetClusterHealthResponse {
  // whether cluster is health or not
  bool is_healthy = 1;

  // unhealthy reasons. some possible values:
  // leaderless_partitions
  // nodes_down
  // under_replicated_partitions
  repeated string unhealthy_reasons = 2;
  int32 controller_id = 3;
  repeated int32 all_nodes = 4;
  repeated int32 nodes_down = 5;
  repeated int32 nodes_in_recovery_mode = 6;
  // leaderless partitions. example values:
  // kafka/events-sink-internal-default-queue-v2/101
  repeated string leaderless_partitions = 7;
  int32 leaderless_count = 8;

  // under replicated partitions. example values:
  // kafka/events-sink-internal-default-queue-v2/101
  repeated string under_replicated_partitions = 9;
  int32 under_replicated_count = 10;
}

// Additional API:
// GET /api/debug_bundle/{file}
// GET /api/debug_bundle/{broker_id}/{file}
// This will download the debug bundle zip file

service DebugBundleService {
  rpc GetClusterHealth(GetClusterHealthRequest) returns (GetClusterHealthResponse) {}
  rpc CreateDebugBundle(CreateDebugBundleRequest) returns (CreateDebugBundleResponse) {}
  rpc GetDebugBundleStatus(GetDebugBundleStatusRequest) returns (GetDebugBundleStatusResponse) {}
  rpc DeleteDebugBundle(DeleteDebugBundleRequest) returns (DeleteDebugBundleResponse) {}
  rpc DeleteDebugBundleFile(DeleteDebugBundleFileRequest) returns (DeleteDebugBundleFileResponse) {}
}
